Agentforce/force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>Sites per Account</description>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>