Agentforce/force-app/main/default/objects/Site__c/fields/Account_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Short_Name__c</fullName>
    <formula>Account__r.Known_As__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Short Name</label>
    <type>Text</type>
</CustomField>