Agentforce/force-app/main/default/objects/Site__c/fields/Account_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Site_Number__c</fullName>
    <label>Account Site Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>