Agentforce/force-app/main/default/objects/Site__c/fields/Active_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Active_Annual_Value__c</fullName>
    <label>Active Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>