Agentforce/force-app/main/default/objects/Site__c/fields/Billing_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Name__c</fullName>
    <label>Billing Address Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>