Agentforce/force-app/main/default/objects/Site__c/fields/Billing_Address_same_as_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_same_as_Site_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to set Billing Address with the value from Site Address</inlineHelpText>
    <label>Billing Address same as Site Address</label>
    <type>Checkbox</type>
</CustomField>