Agentforce/force-app/main/default/objects/Site__c/fields/Billing_BP__c.field-meta.xml
<CustomField>
    <fullName>Billing_BP__c</fullName>
    <inlineHelpText>SAP ID for Invoice Business Partner</inlineHelpText>
    <label>Billing BP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>