Agentforce/force-app/main/default/objects/Site__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sites (Billing Contact)</relationshipLabel>
    <relationshipName>Sites2</relationshipName>
    <type>Lookup</type>
</CustomField>