Agentforce/force-app/main/default/objects/Site__c/fields/Billing_Contact_same_as_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_same_as_Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to set the Billing Contact with the value from Site Key Contact. This also hides the Billing Contact field.</inlineHelpText>
    <label>Billing Contact same as Key Contact</label>
    <type>Checkbox</type>
</CustomField>