Agentforce/force-app/main/default/objects/Site__c/fields/OCS_Contract__c.field-meta.xml
<CustomField>
    <fullName>OCS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OCS Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>