Agentforce/force-app/main/default/objects/Site__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUS-ACT</fullName>
            </value>
            <value>
                <fullName>AUS-NSW</fullName>
            </value>
            <value>
                <fullName>AUS-NT</fullName>
            </value>
            <value>
                <fullName>AUS-QLD</fullName>
            </value>
            <value>
                <fullName>AUS-SA</fullName>
            </value>
            <value>
                <fullName>AUS-TAS</fullName>
            </value>
            <value>
                <fullName>AUS-VIC</fullName>
            </value>
            <value>
                <fullName>AUS-WA</fullName>
            </value>
            <value>
                <fullName>CEN-GIS</fullName>
            </value>
            <value>
                <fullName>CEN-HKB</fullName>
            </value>
            <value>
                <fullName>CEN-NPL</fullName>
            </value>
            <value>
                <fullName>CEN-PMR</fullName>
            </value>
            <value>
                <fullName>CEN-WAN</fullName>
            </value>
            <value>
                <fullName>CEN-WLG</fullName>
            </value>
            <value>
                <fullName>CEN-WPA</fullName>
            </value>
            <value>
                <fullName>NTH-AKA</fullName>
            </value>
            <value>
                <fullName>NTH-AKL</fullName>
            </value>
            <value>
                <fullName>NTH-NTL</fullName>
            </value>
            <value>
                <fullName>NTH-ROT</fullName>
            </value>
            <value>
                <fullName>NTH-THM</fullName>
            </value>
            <value>
                <fullName>NTH-TRG</fullName>
            </value>
            <value>
                <fullName>NTH-WKO</fullName>
            </value>
            <value>
                <fullName>NTH-WKT</fullName>
            </value>
            <value>
                <fullName>STH-BHE</fullName>
            </value>
            <value>
                <fullName>STH-CHC</fullName>
            </value>
            <value>
                <fullName>STH-DUD</fullName>
            </value>
            <value>
                <fullName>STH-GYM</fullName>
            </value>
            <value>
                <fullName>STH-IVC</fullName>
            </value>
            <value>
                <fullName>STH-NSN</fullName>
            </value>
            <value>
                <fullName>STH-TIU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>