Agentforce/force-app/main/default/objects/Site__c/fields/Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Services_Provided__c</fullName>
    <label>Services Provided</label>
    <type>TextArea</type>
</CustomField>