Agentforce/force-app/main/default/objects/Site__c/fields/Ship_To_BP__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_BP__c</fullName>
    <label>Ship To BP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>