Agentforce/force-app/main/default/objects/Site__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <description>AD-185 to create a Site from an Account, marking the site as &apos;Active&apos; or &apos;In-Active&apos;</description>
    <label>Site Address</label>
    <type>Address</type>
</CustomField>