Agentforce/force-app/main/default/objects/Site__c/fields/Site_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_Name__c</fullName>
    <label>Site Address Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>