Agentforce/force-app/main/default/objects/Site__c/fields/Site_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Key_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD 185 to create a Site from an Account, marking the site as &apos;Active&apos; or &apos;In-Active&apos;</description>
    <label>Site Key Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>