Agentforce/force-app/main/default/objects/Site__c/fields/Site_No__c.field-meta.xml
<CustomField>
    <fullName>Site_No__c</fullName>
    <description>Site No</description>
    <displayFormat>ST-{000000}</displayFormat>
    <label>Site No</label>
    <type>AutoNumber</type>
</CustomField>