Agentforce/force-app/main/default/objects/Site__c/fields/Site_Size_Square_Metres__c.field-meta.xml
<CustomField>
    <fullName>Site_Size_Square_Metres__c</fullName>
    <label>Site Size (Square Metres)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>