Agentforce/force-app/main/default/objects/Site__c/fields/SiteCaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>SiteCaseSafeId__c</fullName>
    <description>Site CaseSafeId</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteCaseSafeId</label>
    <type>Text</type>
</CustomField>