Agentforce/force-app/main/default/objects/Site__c/fields/WBS_Code__c.field-meta.xml
<CustomField>
    <fullName>WBS_Code__c</fullName>
    <label>WBS Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>