Agentforce/force-app/main/default/objects/Site__c/fields/Won_Productivity_Rate_Square_Metres__c.field-meta.xml
<CustomField>
    <fullName>Won_Productivity_Rate_Square_Metres__c</fullName>
    <label>Won Productivity Rate (Square Metres)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>