Agentforce/force-app/main/default/objects/Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site_Address__Street__s</columns>
    <columns>Account__c</columns>
    <columns>Services_Provided__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>